--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+::-webkit-scrollbar{
+  width: 15px;
+}
+
+::-webkit-scrollbar-track{
+  background: #262626;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #FFFFFF;
+  border-radius: 5px;
+}
